--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,11 @@ body {
   margin: 0;
   min-height: 100vh;
   font-family: "Roboto", sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-* {
-  border: 2px solid red;
-}
 .first-section {
   background-color: #1f2937;
   padding: 0 300px 150px;
@@ -19,7 +19,8 @@ body {
   padding: 20px 0 0;
 }
 
-.logo {
+.logo,
+.call-to-action {
   color: #f9faf8;
   font-size: 24px;
   font-weight: bold;
@@ -42,6 +43,7 @@ ul {
 .container-top {
   display: flex;
   margin-top: 100px;
+  justify-content: center;
 }
 
 .title {
@@ -51,20 +53,22 @@ ul {
 }
 
 .top-left {
-  flex: 1;
-
+  padding-right: 50px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
-button {
+.signup,
+.signup-bottom {
   width: 150px;
   height: 40px;
   border-radius: 8px;
   background-color: #3882f6;
   color: #e5e7eb;
-  font-weight: bold;
+  font-weight: bolder;
+  font-size: 18px;
+  border: inherit;
 }
 
 .top-img {
@@ -74,7 +78,7 @@ button {
 
 .top-right {
   display: flex;
-  flex: 1;
+
   justify-content: flex-end;
 }
 
@@ -95,6 +99,7 @@ button {
   justify-content: center;
   gap: 50px;
   text-align: center;
+  flex-wrap: wrap;
 }
 
 .img-info {
@@ -125,4 +130,33 @@ button {
   text-align: right;
   padding-right: 50px;
   padding-top: 10px;
+}
+
+.fourth-section {
+  padding: 150px 300px;
+}
+
+.blue-block {
+  background-color: #3882f6;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  padding: 50px 100px;
+}
+
+.text-block {
+  color: #e5e7eb;
+}
+
+.signup-bottom {
+  border: 2px solid white;
+}
+
+.footer {
+  background-color: #1f2937;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 50px 0;
+  color: #e5e7eb;
 }
